feat: 地図表示と計測画面を実装
- flutter_map + OpenStreetMapで地図表示
- ダークモード用タイルフィルター
- HUDスタイルのオーバーレイ
- 磁場値表示パネル
- 計測ポイントマーカー表示
- iOS/Android パーミッション設定

Android APKビルド確認済み

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Mag Plotter</string>
+	<string>MAG PLOTTER</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>mag_plotter</string>
+	<string>MAG PLOTTER</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -31,19 +31,25 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- 位置情報パーミッション -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>磁場計測ポイントの位置を記録するために位置情報を使用します</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>バックグラウンドでも磁場計測を続けるために位置情報を使用します</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>バックグラウンドでも磁場計測を続けるために位置情報を使用します</string>
+	<!-- モーションセンサーパーミッション -->
+	<key>NSMotionUsageDescription</key>
+	<string>磁気センサーを使用して磁場を計測します</string>
 </dict>
 </plist>
