feat: Google Maps API対応 - 高精度衛星写真を実装
- iOS Info.plist に Google Maps APIキーを追加
- Android AndroidManifest.xml に Google Maps APIキーを追加
- 衛星写真タイルをGoogle Mapsに変更 (mt1.google.com)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <!-- Google Maps API Key -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCxexX599NxUF4aNSSF-AxZYMxsESCc3Gc" />
     </application>
     <queries>
         <intent>
